--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
                         <h2 class="d-flex justify-content-center">Nuestros Iconos Obsolutos</h2>
                         <div class="cards-wrapper">
                             <div class="card1">
-                                <img src="/assets/img/zapatillas/Zapatillas-Nike-1.png" class="card-img-top" alt="Nike Air Force 1 White">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-1.png" class="card-img-top"
+                                    alt="Nike Air Force 1 White">
                                 <div class="card-body">
                                     <a href="#" class="btn btn-primary d-flex justify-content-center">Nike Air Force 1
                                         '07 EasyOn</a>
                                 </div>
                             </div>
                             <div class="card1">
-                                <img src="/assets/img/zapatillas/Zapatillas-Nike-2.png" class="card-img-top" alt="Nike Air Force Black">
+                                <img src="/assets/img/zapatillas/Zapatillas-Nike-2.png" class="card-img-top"
+                                    alt="Nike Air Force Black">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Nike Air Force 1 Total Black</a>
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Nike Air Force 1
+                                        Total Black</a>
                                 </div>
                             </div>
                             <div class="card1">
@@ -99,7 +102,7 @@
                             <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Puma-3.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-primary data-bs-toggle-modal d-flex justify-content-center">Puma Suede XL
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Puma Suede XL
                                         "Grinch"</a>
                                 </div>
                             </div>
@@ -117,6 +120,45 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+        </section>
+        <section>
+            <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Zapatillas
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Nike - Air Force</a></li>
+                    <li><a class="dropdown-item" href="#">Adidas - Forum Low</a></li>
+                    <li><a class="dropdown-item" href="#">Puma - Suede XL</a></li>
+                </ul>
+
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Indumentaria
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Buzos</a></li>
+                    <li><a class="dropdown-item" href="#">Remeras</a></li>
+                    <li><a class="dropdown-item" href="#">Pantalones</a></li>
+                </ul>
+
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Accesorios
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Morral</a></li>
+                    <li><a class="dropdown-item" href="#">Anteojos</a></li>
+                    <li><a class="dropdown-item" href="#">Billetera</a></li>
+                </ul>
+
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Ofertas
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Fin de temporada</a></li>
+                    <li><a class="dropdown-item" href="#">Segundas Marcas</a></li>
+                    <li><a class="dropdown-item" href="#">Niños - Niñas</a></li>
+                </ul>
+            </div>
         </section>
     </main>
 
