--- a/pages/detalles-de-producto/busos/buso-1.html
+++ b/pages/detalles-de-producto/busos/buso-1.html
@@ -54,6 +54,14 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Buzo boston</h2>
                 <hr>
+                <li>
+                    <h4>Buzo 100% algodon</h4>
+                </li>
+                <li>
+                    <h4><strong class="me-2">Color:</strong>Rojo / Azul / Gris</h4>
+                </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$65.000</p>
+                <h3 class="fw-bold fs-2">$45.000</h3>
             </div>
         </div>
     </main>
