--- a/pages/detalles-de-producto/busos/buso-1.html
+++ b/pages/detalles-de-producto/busos/buso-1.html
@@ -52,7 +52,7 @@
                 </button>
             </div>
             <div class="col-12 col-md-6 col-lg-6 px-5">
-                <h2 class="mt-5 text-center">Buzo boston</h2>
+                <h2 class="mt-5 text-center">Buzo Boston</h2>
                 <hr>
                 <li>
                     <h4>Buzo 100% algodon</h4>
@@ -69,6 +69,9 @@
                         <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
                         <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>                    
                 </div>
+                <button class="container-fluid p-2 rounded bg-primary">
+                    <h4>Agregar al Carrito</h4>
+                </button>
             </div>
         </div>
     </main>
