--- a/pages/detalles-de-producto/busos/buso-1.html
+++ b/pages/detalles-de-producto/busos/buso-1.html
@@ -75,6 +75,18 @@
                 <button class="container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Buzo con bolsillos laterales, estampa de frente, realizada mediante serigrafia</p>
+                        <p><strong class="me-1">Material:</strong>Algodon Premium</p>
+                        <p><strong class="me-1">Color:</strong>Rojo / Azul / Gris</p>
+                        <p>Talle 1: ancho 72 cm, largo 64 cm</p>
+                        <p>Talle 2: ancho 74 cm, largo 66 cm</p>
+                        <p>Talle 3: ancho 76 cm, largo 68 cm</p>
+                        <P>Talle 4: ancho 78 cm, largo 70 cm</P>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
