--- a/pages/detalles-de-producto/busos/buso-1.html
+++ b/pages/detalles-de-producto/busos/buso-1.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/detalle-producto.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="description"
         content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
@@ -69,14 +69,14 @@
                         <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
                         <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>                    
                 </div>
-                <button class="container-fluid p-2 rounded bg-success my-2">
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
                     <h4>Comprar</h4>
                 </button>
-                <button class="container-fluid p-2 rounded bg-primary">
+                <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
                 <div class="my-2">
-                    <details class="p-3 rounded mb-2">
+                    <details class="Interior p-3 rounded mb-2">
                         <summary class="fs-5">DESCRIPCIÓN</summary>
                         <p>Buzo con bolsillos laterales, estampa de frente, realizada mediante serigrafia</p>
                         <p><strong class="me-1">Material:</strong>Algodon Premium</p>
@@ -86,7 +86,7 @@
                         <p>Talle 3: ancho 76 cm, largo 68 cm</p>
                         <P>Talle 4: ancho 78 cm, largo 70 cm</P>
                     </details>
-                    <details class="p-3 rounded">
+                    <details class="Interior p-3 rounded">
                         <summary class="fs-5">MEDIOS DE PAGO</summary>
                         <p>3 cuotas sin interés de $15.000</p>
                         <p>20% de descuento pagando con Efectivo o Transferencia</p>
