--- a/pages/detalles-de-producto/busos/buso-2.html
+++ b/pages/detalles-de-producto/busos/buso-2.html
@@ -19,41 +19,47 @@
 <body>
 
     <main>
-        <div id="carouselExampleIndicators" class="carousel slide col-12 col-md-6 col-lg-6">
-            <div class="carousel-indicators col-8">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+        <div class="row">
+            <div id="carouselExampleIndicators" class="carousel slide col-12 col-md-6 col-lg-6">
+                <div class="carousel-indicators col-8">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
+                        aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner col-6">
+                    <div class="carousel-item active">
+                        <img src="/assets/img/busos/Buso-Basico-1.png" alt="Buso Basico Gris" class="col-12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/busos/Buso-Basico-2.png" alt="Buso Basico Negro" class="col-12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/busos/Buso-Basico-3.png" alt="Buso Basico Celeste" class="col-12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/busos/Buso-Basico-4.png" alt="Buso Basico Beige" class="col-12">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-inner col-6">
-                <div class="carousel-item active">
-                    <img src="/assets/img/busos/Buso-Basico-1.png" alt="Buso Basico Gris" class="col-12">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/busos/Buso-Basico-2.png" alt="Buso Basico Negro" class="col-12">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/busos/Buso-Basico-3.png" alt="Buso Basico Celeste" class="col-12">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/busos/Buso-Basico-4.png" alt="Buso Basico Beige" class="col-12">
-                </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="text-center mt-5">Buzo Basico</h2>
+                <hr>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </main>
 
