--- a/pages/detalles-de-producto/remeras/remera-1.html
+++ b/pages/detalles-de-producto/remeras/remera-1.html
@@ -50,6 +50,16 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Camiseta de Messi</h2>
+                <hr>
+                <li>
+                    <h4>Material: Poliester</h4>
+                </li>
+                <li>
+                    <h4>Color: Celeste / Azul-Marino / Azul</h4>
+                </li>
+            </div>
         </div>
     </main>
 
