--- a/pages/detalles-de-producto/remeras/remera-2.html
+++ b/pages/detalles-de-producto/remeras/remera-2.html
@@ -36,7 +36,7 @@
                         <img src="/assets/img/remeras/Remera-Estampa-2.png" alt="Remera Estampa 2" class="col-12">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/img/remeras/Remera-Estampa-3.png" alt="Remera Estampa 3 class="col-12">
+                        <img src="/assets/img/remeras/Remera-Estampa-3.png" alt="Remera Estampa 3" class="col-12">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -49,6 +49,16 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Remera Estampada</h2>
+                <hr>
+                <li>
+                    <h4>Material: 100% algodon</h4>
+                </li>
+                <li>
+                    <h4>Color: Negro</h4>
+                </li>
             </div>
         </div>
     </main>
