--- a/pages/detalles-de-producto/remeras/remera-2.html
+++ b/pages/detalles-de-producto/remeras/remera-2.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
+    <meta name="description"
+        content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
     <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
     <meta name="author" content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu">
 </head>
@@ -68,6 +69,12 @@
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>
                 </div>
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
+                    <h4>Comprar</h4>
+                </button>
+                <button class="Botones container-fluid p-2 rounded bg-primary">
+                    <h4>Agregar al Carrito</h4>
+                </button>
             </div>
         </div>
     </main>
