--- a/pages/detalles-de-producto/remeras/remera-2.html
+++ b/pages/detalles-de-producto/remeras/remera-2.html
@@ -75,6 +75,19 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Camiseta de manga corta con estampado, adecuada para uso diario en primavera y verano,
+                            escuela</p>
+                        <p><strong class="me-1">Material:</strong> Algodon</p>
+                        <p><strong class="me-1">Color:</strong> Negro</p>
+                        <p>Talle 1: ancho 54 cm, largo 64 cm</p>
+                        <p>Talle 2: ancho 56 cm, largo 66 cm</p>
+                        <p>Talle 3: ancho 58 cm, largo 68 cm</p>
+                        <P>Talle 4: ancho 60 cm, largo 70 cm</P>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
