--- a/pages/detalles-de-producto/remeras/remera-3.html
+++ b/pages/detalles-de-producto/remeras/remera-3.html
@@ -55,6 +55,16 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Remera Estapada Auto</h2>
+                <hr>
+                <li>
+                    <h4>Material: 100% algodon</h4>
+                </li>
+                <li>
+                    <h4>Color: Blanco / Negro</h4>
+                </li>
+            </div>
         </div>
     </main>
 
