--- a/pages/detalles-de-producto/remeras/remera-3.html
+++ b/pages/detalles-de-producto/remeras/remera-3.html
@@ -64,6 +64,8 @@
                 <li>
                     <h4>Color: Blanco / Negro</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$30.000</p>
+                <h3 class="Precio fw-bold fs-2">$17.999</h3>
             </div>
         </div>
     </main>
