--- a/pages/detalles-de-producto/remeras/remera-4.html
+++ b/pages/detalles-de-producto/remeras/remera-4.html
@@ -51,6 +51,16 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Remera Oversize Estampada</h2>
+                <hr>
+                <li>
+                    <h4>Material: 100% Algodon</h4>
+                </li>
+                <li>
+                    <h4>Color: Negro</h4>
+                </li>
+            </div>
         </div>
     </main>
 
