--- a/pages/detalles-de-producto/remeras/remera-4.html
+++ b/pages/detalles-de-producto/remeras/remera-4.html
@@ -60,6 +60,8 @@
                 <li>
                     <h4>Color: Negro</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$25.000</p>
+                <h3 class="Precio fw-bold fs-2">$14.999</h3>
             </div>
         </div>
     </main>
