--- a/pages/detalles-de-producto/remeras/remera-4.html
+++ b/pages/detalles-de-producto/remeras/remera-4.html
@@ -62,6 +62,13 @@
                 </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$25.000</p>
                 <h3 class="Precio fw-bold fs-2">$14.999</h3>
+                <div class="d-flex gap-2 mb-3">
+                    <h4><strong>Talles:</strong></h4>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">1</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">2</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>
+                </div>
             </div>
         </div>
     </main>
